--- a/provisioning/roles/racoon/templates/racoon.conf.j2
+++ b/provisioning/roles/racoon/templates/racoon.conf.j2
@@ -4,25 +4,26 @@ path pre_shared_key "/etc/racoon/psk.txt";
 remote {{ your_ip }} {
 	exchange_mode main,aggressive;
 	proposal {
-		encryption_algorithm 3des;
+		encryption_algorithm des;
 		hash_algorithm sha1;
 		authentication_method pre_shared_key;
-		dh_group modp1024;
+		dh_group 1;
+		lifetime time 600 sec;
 	}
 	generate_policy off;
 	dpd_delay 5;
 }
 
 sainfo address {{ my_net }}[any] any address {{ your_net }}[any] any {
-	pfs_group modp768;
 	encryption_algorithm 3des;
 	authentication_algorithm hmac_md5;
 	compression_algorithm deflate;
+	lifetime time 200 sec;
 }
 
 sainfo address {{ my_ip }}[any] any address {{ your_net }}[any] any {
-	pfs_group modp768;
 	encryption_algorithm 3des;
 	authentication_algorithm hmac_md5;
 	compression_algorithm deflate;
+	lifetime time 200 sec;
 }
